# medallion

./: README.md
.github/: pull_request_template.md
deploy/: clusterrole.yaml  cm-dagster-workspace.yaml  dagster-user-deployments-values-1.4.3.yaml  dagster-user-deployments-values-air-1.4.3.yaml  dagster-user-deployments-values-all-1.4.3.yaml  dagster-user-deployments-values-weather-1.4.3.yaml  dagster-user-deployments-values.yaml  dagster-values-1.4.3.yaml  dagster-values-data-platform-1.4.3.yaml  dagster-values.yaml  dask-values.yaml  kind-setup  kind-setup-multi-ns  rolebindings.yaml  serviceaccount.yaml
medallion-air/: .dockerignore  .gitignore  Makefile  dagster.yaml  pyproject.toml  workspace.yaml
medallion-air/docker/: Dockerfile
medallion-air/medallion_air/: __init__.py
medallion-air/medallion_air/assets/: __init__.py  partitions.py
medallion-air/medallion_air/assets/bronze/: air_quality.py  config.py
medallion-air/medallion_air/assets/gold/: air_quality.py
medallion-air/medallion_air/assets/silver/: air_quality.py
medallion-air/medallion_air/jobs/: __init__.py  air_quality.py  job_clean.py
medallion-air/medallion_air/ops/: __init__.py
medallion-air/medallion_air/resources/: __init__.py  configs.py  gcs_client.py  parquet_io_manager.py  utils.py
medallion-air/medallion_air/schedules/: air_quality.py
medallion-air/medallion_air/schemas/: air_quality_tables.py  factory.py
medallion-air/medallion_air/typing/: __init__.py  bronze.py  gold.py  silver.py
medallion-air/medallion_air_tests/: test_apis.py
medallion-air/medallion_air_tests/test_assets/: test_bronze_assets.py  test_gold_assets.py  test_silver_assets.py
medallion-air/medallion_air_tests/test_resources/: test_air_quality.py
medallion-air/medallion_air_tests/test_schemas/: test_air_quality_tables.py  test_common.py
medallion-weather/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  workspace.yaml
medallion-weather/docker/: Dockerfile
medallion-weather/medallion_weather/: __init__.py  jobs.py
medallion-weather/medallion_weather/assets/: __init__.py  partitions.py
medallion-weather/medallion_weather/assets/bronze/: bronze.py
medallion-weather/medallion_weather/assets/gold/: gold.py
medallion-weather/medallion_weather/assets/silver/: silver.py
medallion-weather/medallion_weather/jobs/: __init__.py
medallion-weather/medallion_weather/resources/: __init__.py  configs.py  gcs_client.py
medallion-weather/medallion_weather/schemas/: factory.py  weather_tables.py
medallion-weather/medallion_weather/sensors/: asset_sensors.py
medallion-weather/medallion_weather/typing/: __init__.py  schemas.py
medallion-weather/medallion_weather_tests/: test_api.py  test_tables.py
medallion-weather/medallion_weather_tests/test-data/: rain.json  weather.json
