[tool.poetry]
name = "medallion_weather"
description = "This project demonstrates implementation of Medallion Architecture proposed by Databricks using Dagster."
version = "0.1.3"
authors = ["George T. C. Lai <tsungchih.hd@gmail.com>"]
packages = [
    { include = "medallion_weather" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
requests = "^2.28.0"
python-dotenv = "^0.21.0"
numpy = "1.26.4"
pandas = "<2.0.0"
pandera = "<0.20.0"
pendulum = "<3.0"
google-cloud-storage = "^2.3.0"
orjson = "^3.9.2"
dagster = "1.4.3"
dagster-graphql = "1.4.3"
dagster-postgres = "0.20.3"
dagster-k8s = "0.20.3"
dagster-gcp = "0.20.3"
dagster-gcp-pandas = "0.20.3"
dagster-pandera = "0.20.3"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pylama = "^8.4.1"
coverage = "^6.4.1"
dagster-webserver = "1.4.3"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
